# the-doomed-ship

./: .gitignore  CMakeLists.txt  README.md
src/: config.h.in  game_controller.cpp  game_controller.h  main.cpp
src/user_interface/: colors.cpp  colors.h  curses_interface.cpp  curses_interface.h  text_options.h  user_interface.cpp  user_interface.h
